frontend/kubernetes/tls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: ca-issuer
    cert-manager.io/common-name: reminder.com
  name: reminder-ingress
  namespace: default
spec:
  rules:
    - host: reminder.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app-service
                port:
                  number: 80
  tls:
    - hosts:
        - reminder.com
      secretName: reminder-cert
